# cg-lab3-raytracing

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Light.hpp  Material.cpp  Material.hpp  PNGsaver.cpp  PNGsaver.hpp  Primitive.cpp  RayTracer.cpp  RayTracer.hpp  SceneManager.cpp  SceneManager.hpp  geometry.hpp  main.cpp
core/: main.cpp
core/include/: Camera.hpp  Material.hpp  PNGsaver.hpp  Primitive.hpp  RayTracer.hpp  SceneManager.hpp  Window.hpp  geometry.hpp
core/src/: Material.cpp  PNGsaver.cpp  Primitive.cpp  RayTracer.cpp  SceneManager.cpp  Window.cpp
